# vismay

./: .easignore  .gitignore  .npmrc  BACKLOG.md  CLAUDE.md  README.md  auth-gating.excalidraw  build-deck.js  echarts-timeline-options.md  iea-oil-may-2026.config.yaml  index.html  instructions.md  package-lock.json  package.json  paris-road-to-budapest.config.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  regulatory-gantt.json  regulatory-timeline-swimlanes.json  story.yaml  turbo.json  vismay-deck.pptx
.claude/: launch.json
.github/: labeler.yml
app/: globals.css  layout.tsx  page.tsx  sitemap.ts
apps/vizf1/ingest-py/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
apps/vizf1/ingest-py/vizf1_ingest/: __init__.py  cli.py  config.py  extract.py  ingest.py  latest.py  positions.py  supabase_sink.py  telemetry.py
brand/: build-onepager.js  greenmentor-plan.md  one-pager.html  one-pager.md  slides.md  vismay-deck.pptx  vismay-one-pager.pptx
charts/: outbreak-timeline.json
components/: AuraBackground.tsx  DetailSheet.tsx  HomeClient.tsx
docs/: ai-push-summary.md  assistant-context-plan.md  auth-gating.excalidraw  auth.md  canvas-ai-integration-plan.md  canvas-evaluator-plan.md  canvas-schema-aware-prompts-plan.md  compose-claude-apis-workflows-plan.md  compose-from-sources-plan.md  deck-layouts-de-hardcode.html  deck-layouts-de-hardcode.md  deck-stage-subjects-objects.html  deck-stage-subjects-objects.md  expo-team-workflow.md  fly-compute-migration.md  gcp-render-migration.md  generalized-content-engine.html  generalized-content-engine.md  (+17 more)
(+2418 files in other folders)
